# ALang

./: AUTHORS.txt  CMake.vars  CMakeLists.txt  README.md
Example/: Script.al
Include/: DataType.h  DataType.hpp  Exception.h  Exception.hpp
Include/Parser/: Ast.h  Ast.hpp  Node.h
Lib/: CMakeLists.txt
Lib/DataType/: CMakeLists.txt  DataType.cpp  DataTypeALangNode.cpp  DataTypeArray.cpp  DataTypeAstNode.cpp  DataTypeDouble.cpp  DataTypeString.cpp  DataTypeStruct.cpp  DataType_Array.cpp  DataType_Double.cpp  DataType_String.cpp
Resources/Doc/: doxygen.cfg
Resources/Example/: Script.1.al  Script.2.al  Script.al
Src/: CMakeLists.txt  Main.cpp
Src/Lexer/: CMakeLists.txt  Lexer.l
Src/Parser/: Ast.cpp  AstNode.h  CMakeLists.txt  Parser.y
Test/: CMakeLists.txt  DataType.cpp  TestDataType.cpp
